feat: Add jwt protection
