# writer-backend/docs/swagger.yaml
@@ -130,6 +130,8 @@ paths:
           description: 'Error: Failed to insert blog'
           schema:
             type: object
+      security:
+      - BearerAuth: []
       summary: Create a new blog post
       tags:
       - Blogs
@@ -153,6 +155,8 @@ paths:
           description: 'Error: Failed to delete blog'
           schema:
             type: object
+      security:
+      - BearerAuth: []
       summary: Delete a blog post
       tags:
       - Blogs
@@ -175,6 +179,8 @@ paths:
           description: 'Error: Blog not found'
           schema:
             type: object
+      security:
+      - BearerAuth: []
       summary: Get a blog post by ID
       tags:
       - Blogs
@@ -210,7 +216,15 @@ paths:
           description: 'Error: Failed to update blog'
           schema:
             type: object
+      security:
+      - BearerAuth: []
       summary: Update a blog post
       tags:
       - Blogs
+securityDefinitions:
+  BearerAuth:
+    description: 'Provide your JWT token like: "Bearer {token}"'
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
